--- a/framework/sass/normalize.scss
+++ b/framework/sass/normalize.scss
@@ -1,39 +1,69 @@
+@media screen and (min-width: 320px) {
+    html {
+        font-size: 10px;
+    }
+}
 
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  outline: none;
-  -webkit-tap-highlight-color:rgba(255,0,0,0);
+@media screen and (min-width: 375px) {
+    html {
+        font-size: 12px;
+    }
 }
-body{
-  font-family: "Helvetica Neue", Helvetica, STHeiTi, sans-serif;
-  background: $brand-bg-color;
+
+@media screen and (min-width: 414px) {
+    html {
+        font-size: 14px;
+    }
 }
+
+@media screen and (min-width: 600px) {
+    html {
+        font-size: 16px;
+    }
+}
+
+body {
+    font-family: "Helvetica Neue", Helvetica, STHeiTi, sans-serif;
+    * {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+        outline: none;
+        //-webkit-tap-highlight-color: rgba(0,0,0,0);
+    }
+}
+
 //some save text class
-.fn-clear{
-  clear: both;
+.fn-clear {
+    clear: both;
 }
-.fn-left{
-  float: left;
+
+.fn-left {
+    float: left;
 }
-.fn-right{
-  float: right;
+
+.fn-right {
+    float: right;
 }
-.fn-show{
-  display: block;
+
+.fn-show {
+    display: block;
 }
-.fn-hide{
-  display: none;
+
+.fn-hide {
+    display: none;
 }
-.text-left{
-  text-align: left;
+
+.text-left {
+    text-align: left;
 }
-.text-center{
-  text-align: center;
+
+.text-center {
+    text-align: center;
 }
-.text-right{
-  text-align: right;
+
+.text-right {
+    text-align: right;
 }
