--- a/app/modules/m_test/view/index.html
+++ b/app/modules/m_test/view/index.html
@@ -1,3 +1,4 @@
 <div ng-controller="IndexCtrl">
     <h1 ng-bind="hello"></h1>
+    <div scroll-widget id="orderList" other-class="order-scroll-class" options="orderListOptions"></div>
 </div>
