--- a/framework/theme-default.scss
+++ b/framework/theme-default.scss
@@ -1,2 +1,2 @@
-@import "sass/theme/default/variables";
-@import "sass/theme/default/base";
+@import "sass/theme/default/variables.scss";
+@import "sass/theme/default/base.scss";
