--- a/framework/sass/normalize.scss
+++ b/framework/sass/normalize.scss
@@ -21,18 +21,18 @@
         font-size: 16px;
     }
 }
-
-body {
+* {
     font-family: "Helvetica Neue", Helvetica, STHeiTi, sans-serif;
-    * {
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-        outline: none;
-        //-webkit-tap-highlight-color: rgba(0,0,0,0);
-    }
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    outline: none;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+body {
+    width: 100%;
 }
 
 //some save text class
