--- a/components/directive/footer/footer.scss
+++ b/components/directive/footer/footer.scss
@@ -15,8 +15,8 @@
         height: 100%;
         text-align: center;
         .icon{
-            width: px2rem(24px);
-            height: px2rem(24px);
+            width: 24px;
+            height: 24px;
             margin: 0 auto;
             overflow: hidden;
             display: block;
