up doc widget dialog part

--- a/doc/modules/m_widget/view/index.html
+++ b/doc/modules/m_widget/view/index.html
@@ -1,3 +1,6 @@
 <div ng-controller="WidgetCtrl">
     This is the doc widget page.
+    <ul>
+    	<li ng-click="goDialog()">Dialog</li>
+    </ul>
 </div>
