add hash change event. add login module add register module

--- a/framework/sass/normalize.scss
+++ b/framework/sass/normalize.scss
@@ -22,7 +22,8 @@
     }
 }
 * {
-    font-family: "Helvetica Neue", Helvetica, STHeiTi, sans-serif;
+    //font-family: "Helvetica Neue", Helvetica, STHeiTi, sans-serif;
+    font-family: 'Microsoft YaHei',微软雅黑,'Microsoft Yahei',黑体,宋体,Arial,Simsun,Helvetica,sans-serif;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
