--- a/doc/modules/m_widget/view/dialog.html
+++ b/doc/modules/m_widget/view/dialog.html
@@ -1,3 +1,10 @@
 <div ng-controller="DialogCtrl">
     This is the doc dialog page.
+    <ul>
+	    <li><button ng-click="openAlert()">Alert</button></li>
+	    <li><button ng-click="openSpinner()">Spinner</button></li>
+	    <li><button ng-click="openConfirm()">Confirm</button></li>
+	    <li><button ng-click="openMessage()">Message</button></li>
+	    <li><button ng-click="openToast()">Toast</button></li>
+    </ul>
 </div>
