--- a/framework/theme-default.scss
+++ b/framework/theme-default.scss
@@ -1,2 +1,2 @@
-@import "sass/theme/default/variables.scss";
+@import "sass/theme/<%=THEME_NAME%>/variables.scss";
 @import "sass/theme/default/base.scss";
