--- a/components/components.scss
+++ b/components/components.scss
@@ -5,5 +5,6 @@
 //import your useful components' scss file.
 @import 'directive/header/header.scss';
 @import 'directive/footer/footer.scss';
+@import 'directive/tab/tab.scss';
 
 @import "provider/dialog/dialog.scss";
