--- a/doc/modules/m_style/view/index.html
+++ b/doc/modules/m_style/view/index.html
@@ -1,3 +1,15 @@
 <div ng-controller="StyleCtrl">
-    This is the doc style page.
+    <div class="cell-group">
+        <div class="cell" ng-click="goStyleView('doc.style-form')">
+            <div class="left-box clearly-width">
+                <span class="label">表单样式</span>
+            </div>
+            <div class="middle-box">
+                <span class="content">buttons, input, cell</span>
+            </div>
+            <div class="right-box">
+                <span class="arrow-right"></span>
+            </div>
+        </div>
+    </div>
 </div>
