--- a/doc/modules/m_layout/sass/layout.scss
+++ b/doc/modules/m_layout/sass/layout.scss
@@ -17,7 +17,7 @@
         flex: 1;
         width: 100%;
         overflow-x: hidden;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
     .layout-footer{
         width: 100%;
