--- a/framework/sass/icon.scss
+++ b/framework/sass/icon.scss
@@ -1,4 +1,5 @@
-.arrow-right{
+// arrow-right
+.arrow-right {
     width: px2rem(24px);
     height: px2rem(24px);
     border-top: 2px solid #ccc;
@@ -8,7 +9,8 @@
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
 }
-.arrow-down{
+//arrow-down
+.arrow-down {
     width: px2rem(24px);
     height: px2rem(24px);
     border-bottom: 2px solid #ccc;
@@ -18,3 +20,39 @@
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
 }
+// circle-close
+.circle-close {
+    width: 100%;
+    height: 100%;
+    display:block;
+    position:relative;
+    -webkit-border-radius:50%;
+    -moz-border-radius:50%;
+    border-radius:50%;
+    background: #f00;
+    &:before, &:after {
+        content: '';
+        height: 16%;
+        width: 66%;
+        display: block;
+        background: #fff;
+        position: absolute;
+        top: 40%;
+        left: 17%;
+        transform: rotate(-45deg);
+        -webkit-transform: rotate(-45deg);
+        -moz-transform: rotate(-45deg);
+        -o-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+    }
+    &:after {
+        transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+        -moz-transform: rotate(45deg);
+        -o-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+    }
+}
+
+
+
