--- a/doc/modules/m_style/view/index.html
+++ b/doc/modules/m_style/view/index.html
@@ -11,5 +11,16 @@
                 <span class="arrow-right"></span>
             </div>
         </div>
+        <div class="cell" ng-click="goStyleView('doc.style-logo')">
+            <div class="left-box clearly-width">
+                <span class="label">Logo样式</span>
+            </div>
+            <div class="middle-box">
+                <span class="content">logo</span>
+            </div>
+            <div class="right-box">
+                <span class="arrow-right"></span>
+            </div>
+        </div>
     </div>
 </div>
