--- a/framework/sass/icon.scss
+++ b/framework/sass/icon.scss
@@ -53,6 +53,334 @@
         -ms-transform: rotate(45deg);
     }
 }
+//logo
+.logo-box{
+    width:px2rem(40px);
+    height: px2rem(40px);
+    position: relative;
+}
+.logo{
+    width: 100%;
+    height: 100%;
+    .line1{
+        width: 100%;
+        height: 33.3%;
+        border-radius: px2rem(5px);
+        background: $color-primary;
+        position: absolute;
+        top: 33.3%;
+        -webkit-transform: rotate(45deg);
+        -moz-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        -o-transform: rotate(45deg);
+        transform: rotate(45deg);
+        overflow: hidden;
+
+        &:before{
+            content: '';
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
+            display: block;
+            width: 33.3%;
+            height: 100%;
+            background: #ffa022;
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+        &:after{
+            content: '';
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
+            display: block;
+            width: 33.3%;
+            height: 100%;
+            border-left: px2rem(4px) solid #fff;
+            position: absolute;
+            right: 0;
+            top: 0;
+        }
+    }
+    .line2{
+        width: 100%;
+        height: 33.3%;
+        border-radius: px2rem(5px);
+        background: $color-primary;
+        position: absolute;
+        top: 33.3%;
+        -webkit-transform: rotate(-45deg);
+        -moz-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+        -o-transform: rotate(-45deg);
+        transform: rotate(-45deg);
+        &:before{
+            content: '';
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
+            display: block;
+            width: 33.3%;
+            height: 100%;
+            border-right: px2rem(4px) solid #fff;
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+        &:after{
+            content: '';
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
+            display: block;
+            width: 33.3%;
+            height: 100%;
+            background: darken($color-primary, 10%);
+            position: absolute;
+            left: 33.3%;
+            top: 0;
+        }
+    }
+    .dot{
+        width: 33.3%;
+        height: 33.3%;
+        position: absolute;
+        left: 33.3%;
+        top: 33.3%;
+        &:before{
+            content: '';
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
+            display: block;
+            width: 20%;
+            height: 74%;
+            position: absolute;
+            background: #fff;
+            left: 40%;
+            top: 13%;
+            border-radius: px2rem(2px);
+        }
+        &:after{
+            content: '';
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
+            display: block;
+            width: 76%;
+            height: 20%;
+            position: absolute;
+            background: #fff;
+            left: 13%;
+            top: 40%;
+            border-radius: px2rem(2px);
+        }
+
+    }
+    &.animate{
+        -webkit-animation: logo-animate 1.20s linear 0.1s infinite;
+        -moz-animation: logo-animate 1.20s linear 0.1s infinite;
+        -ms-animation: logo-animate 1.20s linear 0.1s infinite;
+        animation: logo-animate 1.20s linear 0.1s infinite;
+        -webkit-transform-origin: 50% 49%;
+        -moz-transform-origin: 50% 49%;
+        -ms-transform-origin: 50% 49%;
+        transform-origin: 50% 49%;
+        //.line1{
+        //    -webkit-animation: line-a1 1.20s linear 0.1s infinite;
+        //    -moz-animation: line-a1 1.20s linear 0.1s infinite;
+        //    -ms-animation: line-a1 1.20s linear 0.1s infinite;
+        //    animation: line-a1 1.20s linear 0.1s infinite;
+        //    -webkit-transform-origin: 50% 49%;
+        //    -moz-transform-origin: 50% 49%;
+        //    -ms-transform-origin: 50% 49%;
+        //    transform-origin: 50% 49%;
+        //}
+        //.line2{
+        //    -webkit-animation: line-a2 1.20s linear 0.1s infinite;
+        //    -moz-animation: line-a2 1.20s linear 0.1s infinite;
+        //    -ms-animation: line-a2 1.20s linear 0.1s infinite;
+        //    animation: line-a2 1.20s linear 0.1s infinite;
+        //    -webkit-transform-origin: 50% 49%;
+        //    -moz-transform-origin: 50% 49%;
+        //    -ms-transform-origin: 50% 49%;
+        //    transform-origin: 50% 49%;
+        //}
+        //.dot{
+        //    -webkit-animation: logo-animate 1.40s linear 0.1s infinite;
+        //    -moz-animation: logo-animate 1.40s linear 0.1s infinite;
+        //    -ms-animation: logo-animate 1.40s linear 0.1s infinite;
+        //    animation: logo-animate 1.40s linear 0.1s infinite;
+        //    -webkit-transform-origin: 50% 49%;
+        //    -moz-transform-origin: 50% 49%;
+        //    -ms-transform-origin: 50% 49%;
+        //    transform-origin: 50% 49%;
+        //}
+    }
+    @-webkit-keyframes line-a1 {
+        0% {
+            opacity: 1;
+            -webkit-transform: rotate(45deg)
+        }
+        50%{
+            opacity: 1;
+            -webkit-transform: rotate(90deg)
+        }
+        100%{
+            opacity: 1;
+            -webkit-transform: rotate(45deg)
+        }
+    }
+
+    @-moz-keyframes line-a1 {
+        0% {
+            opacity: 1;
+            -webkit-transform: rotate(45deg)
+        }
+        50%{
+            opacity: 1;
+            -webkit-transform: rotate(90deg)
+        }
+        100%{
+            opacity: 1;
+            -webkit-transform: rotate(45deg)
+        }
+    }
+
+    @-ms-keyframes line-a1 {
+        0% {
+            opacity: 1;
+            -webkit-transform: rotate(45deg)
+        }
+        50%{
+            opacity: 1;
+            -webkit-transform: rotate(90deg)
+        }
+        100%{
+            opacity: 1;
+            -webkit-transform: rotate(45deg)
+        }
+    }
+
+    @keyframes line-a1 {
+        0% {
+            opacity: 1;
+            -webkit-transform: rotate(45deg)
+        }
+        50%{
+            opacity: 1;
+            -webkit-transform: rotate(90deg)
+        }
+        100%{
+            opacity: 1;
+            -webkit-transform: rotate(45deg)
+        }
+    }
+    @-webkit-keyframes line-a2 {
+        0% {
+            opacity: 1;
+            -webkit-transform: rotate(-45deg)
+        }
+        50%{
+            opacity: 1;
+            -webkit-transform: rotate(-90deg)
+        }
+        100%{
+            opacity: 1;
+            -webkit-transform: rotate(-45deg)
+        }
+    }
+
+    @-moz-keyframes line-a2 {
+        0% {
+            opacity: 1;
+            -webkit-transform: rotate(-45deg)
+        }
+        50%{
+            opacity: 1;
+            -webkit-transform: rotate(-90deg)
+        }
+        100%{
+            opacity: 1;
+            -webkit-transform: rotate(-45deg)
+        }
+    }
+
+    @-ms-keyframes line-a2 {
+        0% {
+            opacity: 1;
+            -webkit-transform: rotate(-45deg)
+        }
+        50%{
+            opacity: 1;
+            -webkit-transform: rotate(-90deg)
+        }
+        100%{
+            opacity: 1;
+            -webkit-transform: rotate(-45deg)
+        }
+    }
+
+    @keyframes line-a2 {
+        0% {
+            opacity: 1;
+            -webkit-transform: rotate(-45deg)
+        }
+        50%{
+            opacity: 1;
+            -webkit-transform: rotate(-90deg)
+        }
+        100%{
+            opacity: 1;
+            -webkit-transform: rotate(-45deg)
+        }
+    }
+
+    @-webkit-keyframes logo-animate {
+        0% {
+            opacity: 1;
+            -webkit-transform: rotate(0deg)
+        }
+        100%{
+            opacity: 1;
+            -webkit-transform: rotate(360deg)
+        }
+    }
+
+    @-moz-keyframes logo-animate {
+        0% {
+            opacity: 1;
+            -webkit-transform: rotate(0deg)
+        }
+        100%{
+            opacity: 1;
+            -webkit-transform: rotate(360deg)
+        }
+    }
+
+    @-ms-keyframes logo-animate {
+        0% {
+            opacity: 1;
+            -webkit-transform: rotate(0deg)
+        }
+        100%{
+            opacity: 1;
+            -webkit-transform: rotate(360deg)
+        }
+    }
+
+    @keyframes logo-animate {
+        0% {
+            opacity: 1;
+            -webkit-transform: rotate(0deg)
+        }
+        100%{
+            opacity: 1;
+            -webkit-transform: rotate(360deg)
+        }
+    }
+}
 
 
 
