update the home view style

--- a/doc/modules/m_widget/view/index.html
+++ b/doc/modules/m_widget/view/index.html
@@ -5,7 +5,7 @@
                 <span class="label">Dialog</span>
             </div>
             <div class="middle-box">
-                <span class="content"></span>
+                <span class="content">alert, spinner, confirm, message, toast</span>
             </div>
             <div class="right-box">
                 <span class="arrow-right"></span>
