--- a/components/directive/footer/footer.scss
+++ b/components/directive/footer/footer.scss
@@ -1,6 +1,7 @@
 .footer{
     width: 100%;
     height: 100%;
+    background: #fff;
     display: -webkit-box;
     display: flex;
     -webkit-box-orient: horizontal;
