throw the login interface

--- a/doc/modules/m_style/view/logo.html
+++ b/doc/modules/m_style/view/logo.html
@@ -1,4 +1,4 @@
-<div>
+<div ng-controller="Style.LogoCtrl">
     <div class="logo-box">
         <div class="logo animate">
             <div class="line1"></div>
