--- a/app/modules/m_login/view/login.html
+++ b/app/modules/m_login/view/login.html
@@ -1,3 +1,73 @@
-<div ng-controller="LoginCtrl">
-    This is the login ctrl.
+<div ng-controller="LoginCtrl" class="login-page">
+    <div class="tab-box">
+        <div class="tab-header">
+            <div class="tab-item" ng-class="{'active': selectedTab == 0}" ng-click="checkTab(0)">密码登录</div>
+            <div class="tab-item" ng-class="{'active': selectedTab == 1}" ng-click="checkTab(1)">验证码登录</div>
+        </div>
+        <div class="tab-content">
+            <div class="item-content" ng-show="selectedTab == 0">
+                <form name="passwordLoginForm">
+                    <div class="cell-group">
+                        <div class="cell">
+                            <div class="left-box">
+                                <span class="label-icon phone"></span>
+                            </div>
+                            <div class="middle-box">
+                                <input type="tel" placeholder="请输入11位手机号" maxlength="11" minlength="11" ng-model="passwordLogin.phone" required>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="left-box">
+                                <span class="label-icon password"></span>
+                            </div>
+                            <div class="middle-box">
+                                <input type="password" placeholder="请输入密码" minlength="4" ng-model="passwordLogin.password" required>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="btn-dock">
+                        <button class="btn btn-primary" ng-disabled="passwordLoginForm.$invalid" ng-click="doPasswordLogin()">立即登录</button>
+                    </div>
+                </form>
+            </div>
+            <div class="item-content" ng-show="selectedTab == 1">
+                <form name="codeLogin">
+                    <div class="cell-group">
+                        <div class="cell">
+                            <div class="left-box">
+                                <span class="label-icon phone"></span>
+                            </div>
+                            <div class="middle-box">
+                                <input type="tel" placeholder="请输入11位手机号" maxlength="11" minlength="11" ng-model="codeLogin.phone">
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="left-box image-code">
+                                <span class="label-icon"></span>
+                            </div>
+                            <div class="middle-box">
+                                <input type="tel" placeholder="请输入图片验证码" maxlength="4" minlength="4" ng-model="passwordLogin.imageCode">
+                            </div>
+                            <div class="right-box">
+
+
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="left-box">
+                                <span class="label-icon safe-code"></span>
+                            </div>
+                            <div class="middle-box">
+                                <input type="tel" placeholder="请输入短信验证码" maxlength="6" minlength="6" ng-model="passwordLogin.verifyCode">
+                            </div>
+                            <div class="right-box">
+                                <button class="btn btn-xsmall btn-primary in-cell">发送验证码</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+        </div>
+    </div>
 </div>
